Fix: preloader logo size issue on mobile

--- a/app/styles/layout/_media.sass
+++ b/app/styles/layout/_media.sass
@@ -7,8 +7,8 @@
 @media (max-width: 768px)
   .preloader
     width: 240px
-    height: 41px
-    background-size: 240px 41px
+    height: 80px
+    background-size: 240px
 
   .modal-body
     width: 90%
